# sntp-rs

./: Cargo.toml  README.md
examples/: client.rs
src/: client.rs  lib.rs  macros.rs
