[package]
name = "sntp"
version = "0.1.0"
authors = ["Pietro Lorefice <pietro@develer.com>"]
edition = "2018"
autoexamples = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = { version = "1.3.4", default-features = false }
log = { version = "0.4.8", default-features = false, optional = true }

[dependencies.smoltcp]
version = "0.6.0"
default-features = false
features = ["proto-ipv4", "socket-udp"]

[dev-dependencies]
env_logger = "0.7.1"

[features]
default = []
tap = ["log", "smoltcp/ethernet", "smoltcp/phy-tap_interface"]

[[example]]
name = "client"
required-features = ["tap"]
