[package]
authors = ["Pietro Lorefice <pietro.lorefice@gmail.com>"]
categories = ["embedded", "network-programming", "no-std"]
description = "A Simple Network Time Protocol (SNTP) client implementation using smoltcp."
edition = "2018"
homepage = "https://github.com/plorefice/sntp-rs"
keywords = ["sntp", "network"]
license = "MIT OR Apache-2.0"
name = "sntp"
readme = "README.md"
repository = "https://github.com/plorefice/sntp-rs"
version = "0.1.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = { version = "1.3.4", default-features = false }
log = { version = "0.4.8", default-features = false, optional = true }

[dependencies.smoltcp]
version = "0.6.0"
default-features = false
features = ["proto-ipv4", "socket-udp"]

[dev-dependencies]
env_logger = "0.7.1"

[features]
default = []
tap = ["log", "smoltcp/ethernet", "smoltcp/phy-tap_interface"]

[[example]]
name = "client"
required-features = ["tap"]
